fix arrow navbar vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ a {
 	width: 100%;
 }
 
+.dropdown-toggle::after {
+	vertical-align: 0.13em;
+}
+
 .dropdown-toggle:focus::after {
 	transform: rotate(-180deg);
 }
